Updated thinkpad post.

--- a/_posts/2019-10-16-ThinkPad-T420.md
+++ b/_posts/2019-10-16-ThinkPad-T420.md
@@ -5,7 +5,7 @@ date:   2019-10-16 21:52:00 +0100
 categories: hardware
 ---
 
-I've been using my Retina MacBook Pro 2012 since early 2017. Like the rest of us, it's dying slowly. Sure, a dead pixel is fine. A creaking case? No problem. Sitting in the library trying to code whilst what sounds like a Boeing 747 landing next to you is a large enough problem which recieves the cold stare of a second year politics student as you ruin their study (procrastination) session. 
+I've been using my Retina MacBook Pro 2012 since early 2017. Like the rest of us, it's dying slowly. Sure, a dead pixel is fine. A creaking case? No problem. Sitting in the library trying to code whilst what sounds like a Boeing 747 landing next to you is a large enough problem to warrant the cold stare of a second year politics student as you ruin their study (procrastination) session. 
 
 After reading Geoff Greer's [blog post](https://geoff.greer.fm/2017/01/23/oldest-viable-laptop/), I decided to bring my ThinkPad T420 out of retirement. 
 
