Updated the layout. Working on ifinishing the migration of the old site to the new site.

--- a/_posts/2020-10-25-dont-know.md
+++ b/_posts/2020-10-25-dont-know.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Things I Don't Know"
+title:  "Things I Don't Know (2020)"
 ---
 
 In 2018 Dan Abramov wrote a [now famous blog post listing the topics in technology that he knew very little about](https://overreacted.io/things-i-dont-know-as-of-2018/). I thought, and still think, that this is a wonderful idea for both a blog post and as a way to reflect on your abilities as a developer. Therefore I present my version of the list below:
