Added new nav layout and simplified pages.

--- a/_posts/2021-09-11-indie-web.md
+++ b/_posts/2021-09-11-indie-web.md
@@ -3,5 +3,29 @@ layout: post
 title:  "Discovering the Indie Web"
 ---
 
-This is a post dedicated to the indie web. It is currently a work in progress. 
 
+## What is the indie web? 
+
+https://indieweb.org/
+
+## Blog Roll
+
+What is a blogroll? 
+https://pinboard.in/u:elliot35/t:blog/
+
+
+## Searching the Web
+
+Google search is broken. A modern search query in 2021 looks something like: 
+
+```
+mysearch term -pinterest -facebook -reddit -twitter
+```
+
+Luckily, you can have a pretty distraction free (and useful) browsing experience by using the following tools:
+
+- wiby.me
+- Bing Images
+- Hacker news search engine that I can't remember: 
+
+## Web Rings 
