--- a/_posts/2021-11-04-review.md
+++ b/_posts/2021-11-04-review.md
@@ -3,12 +3,10 @@ layout: post
 title: Weekly Review 02
 ---
 
-
-Consumption 
-
 ## 📺 I watched 
 
-- [Alistair Cambell's GQ interview with John McDonell](https://www.youtube.com/watch?v=joo4w_BwEJs)
+- [Alistair Cambell's GQ interview with John McDonell](https://www.youtube.com/watch?v=joo4w_BwEJs): An interesting interview between (former?) political heavyweights with vastly different opinions.
+- [James Scholz's YouTube channel](https://www.youtube.com/c/jamesscholz): I don't know how I found this guy but he's into a lot of the same stuff as me. I like his room setup, his to-the-camera pieces about his motivations for studying. He's a relaxing guy to listen to whilst working. Oh, he also has a [website](https://www.youtube.com/c/jamesscholz). 
 
 ## 📖 I read 
 
@@ -17,4 +15,10 @@ Consumption
 
 ## 🎧 I heard 
 
-- Vergecast 69 
+🎙 Podcasts 
+
+- [Vergecast 69](https://www.youtube.com/watch?v=a3rwdXYFGvM): First video episode of The Vergecast in what feels like forever. I've been listening since 2012. This episode was put together their 10th anniversary event.
+
+🎵 Music
+
+- [Play by Moby](https://musicbrainz.org/release-group/7f6a4e72-9fee-39db-8817-63425f97a0f5_)
