--- a/_posts/2020-03-22-review.md
+++ b/_posts/2020-03-22-review.md
@@ -1,20 +1,20 @@
 ---
 layout: post
-title:  "Weekly Review 01"
+title:  "Weekly Review March 22nd 2020"
 ---
 
 There is so much content online with the potential to distract me that I often find it difficult to concentrate. When I'm focusing on a new idea, I often find that my focus is pulled away from it just as I get going. I might be thinking about a specific programming problem and suddenly think about some obscure article I read three years ago. What was the name of the author? Is it in my bookmarks? No. Wait. It might be saved in a text file in my dropbox. Speaking of which, I really need to sort out my entire photo library. Photos. Oh, Canon just released that new lens didn't they? ... Do you see my problem? Part of my solution to my attention defecit is to record in a blog post all of the interesting things that I've read, watched or listened. I have a theory that it'll free up room in my brain. Let's see if I'm right... 
      
-## I watched...
+## 📺 I watched
     
 - [Clairo's interview with Matt Wilkinson](https://www.youtube.com/watch?v=bkZj3Lbck5Q&list=LL5hq7oK0uo4zwfWrxDyRLhw&index=15)
 
 - [A very short talk between Bill Gates and Prof. Vaclav Smil](https://www.youtube.com/watch?v=p55cFT-ti-I&list=LL5hq7oK0uo4zwfWrxDyRLhw&index=22): In addition to his philantropy, Bill Gates (and his team?) produces some great YouTube content. The [Netflix documentary](https://www.netflix.com/gb/title/80184771) on him is well worth a watch, if only to inspire you to read more.   
 
-## I read...
+## 📖 I read
     
 - [Website obesity crisis](https://idlewords.com/talks/website_obesity.htm) by [Maciej Ceglowski](https://idlewords.com/): the recording of this talk on YouTube is really quite good.  
 
-## I listened to... 
+## 🎧 I heard 
 
 [Stevie Ray Vaughn - Tin Pan Alley Live at Capitol Theatre](https://www.youtube.com/watch?v=wCsGWkRebw8)
