Updated header styling

--- a/_posts/2021-09-11-indie-web.md
+++ b/_posts/2021-09-11-indie-web.md
@@ -4,14 +4,17 @@ title:  "Discovering the Indie Web"
 ---
 
 
-## What is the indie web? 
+## What is the [indie web](https://indieweb.org/)? 
 
-https://indieweb.org/
 
-## Blog Roll
 
-What is a blogroll? 
-https://pinboard.in/u:elliot35/t:blog/
+Related concepts are [digital gardens]()
+
+
+- Blogrolls https://pinboard.in/u:elliot35/t:blog/
+
+Another concept that has been lost and has only just recently been re-discovered are Webrings. Some of my favourite webrings to visit are 
+the [low tech webring](https://emreed.net/LowTech_Directory.html), [gossip web's directory of handmade websites](https://gossipsweb.net).
 
 
 ## Searching the Web
@@ -28,4 +31,8 @@ Luckily, you can have a pretty distraction free (and useful) browsing experience
 - Bing Images
 - Hacker news search engine that I can't remember: 
 
-## Web Rings 
+
+## Further Reading
+
+- [Website Obesity Crisis](https://idlewords.com/talks/website_obesity.htm)
+- Openweb 
