--- a/_posts/2022-01-01-projects.md
+++ b/_posts/2022-01-01-projects.md
@@ -8,4 +8,4 @@ This year I thought I would try something different and publish a list of all th
 [] Finish my letterboxd script.  
 [] Consolidate my machine learning knowledge.  
 [] Deliver my python script that converts a folder into a photo gallery.  
-
+[] Build on my university knowledge of [machine learning](http://www.sharetechnote.com).
