Added new title styling, added new project pages and cleaned index page.

--- a/_posts/2022-01-01-projects.md
+++ b/_posts/2022-01-01-projects.md
@@ -5,7 +5,6 @@ title: 2022 Projects
 
 This year I thought I would try something different and publish a list of all the projects that I hope to complete. 
 
-[] Finish my letterboxd script.  
-[] Consolidate my machine learning knowledge.  
-[] Deliver my python script that converts a folder into a photo gallery.  
-[] Build on my university knowledge of [machine learning](http://www.sharetechnote.com).
+- Reading List and Notes for 2022.  
+- Python script that converts a folder into a photo gallery.  
+- Build on my university knowledge of [machine learning](http://www.sharetechnote.com).
