Added new blog posts. Unfinished.

--- a/_posts/2022-01-28-thinking.md
+++ b/_posts/2022-01-28-thinking.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Thinking about Thinking 
+title: Metacognition
 ---
 
 Being aware of my own shortcomings - I often think about this in overly emotional terms rather than rationally. This year I'm commiting myself to consider my actions more rationally: 
