Updated old posts.

--- a/_posts/2020-03-22-review.md
+++ b/_posts/2020-03-22-review.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Weekly Review March 22nd 2020"
+title:  "Weekly Roundup March 22nd 2020"
 ---
 
 There is so much content online with the potential to distract me that I often find it difficult to concentrate. When I'm focusing on a new idea, I often find that my focus is pulled away from it just as I get going. I might be thinking about a specific programming problem and suddenly think about some obscure article I read three years ago. What was the name of the author? Is it in my bookmarks? No. Wait. It might be saved in a text file in my dropbox. Speaking of which, I really need to sort out my entire photo library. Photos. Oh, Canon just released that new lens didn't they? ... Do you see my problem? Part of my solution to my attention defecit is to record in a blog post all of the interesting things that I've read, watched or listened. I have a theory that it'll free up room in my brain. Let's see if I'm right... 
