--- a/_posts/2021-09-11-indie-web.md
+++ b/_posts/2021-09-11-indie-web.md
@@ -1,38 +1,49 @@
 ---
 layout: post
-title:  "Discovering the Indie Web"
+title:  "Discovering the small/open/indie Web"
 ---
 
 
-## What is the [indie web](https://indieweb.org/)? 
+## What is the [small/open/indie web](https://indieweb.org/)? 
+
+The small/open/indie web describes a section of the web that still values creativity, individuality and personalisation. It  shuns tracking, advertising and other types of privacy violations. It is the web as it was 25 years ago.
+
+### Types of small/open/indie websites
+
+- Personal blogs 
+- Open books 
+- Digital gardens
+
+### Components of a small/open/indie website
+
+#### Blogrolls
+
+A simple list of blogs.
+
+#### Web Rings
+The [low tech webring](https://emreed.net/LowTech_Directory.html) and [gossip web's directory of handmade websites](https://gossipsweb.net) are two that come to mind.
 
 
+## How do you access it?
 
-Related concepts are [digital gardens]()
-
-
-- Blogrolls https://pinboard.in/u:elliot35/t:blog/
-
-Another concept that has been lost and has only just recently been re-discovered are Webrings. Some of my favourite webrings to visit are 
-the [low tech webring](https://emreed.net/LowTech_Directory.html), [gossip web's directory of handmade websites](https://gossipsweb.net).
-
-
-## Searching the Web
-
-Google search is broken. A modern search query in 2021 looks something like: 
+Google search is broken. A modern **useful** search query in 2021 looks something like: 
 
 ```
-mysearch term -pinterest -facebook -reddit -twitter
+mysearchterm -pinterest -facebook -reddit -twitter
 ```
 
 Luckily, you can have a pretty distraction free (and useful) browsing experience by using the following tools:
 
-- wiby.me
-- Bing Images
-- Hacker news search engine that I can't remember: 
+- [wiby.me](https://wiby.me)
+- [marginalia search](https://search.marginalia.nu/)
+- [68k.news](68k.news)
+- [frogfind](frogfind.com)
 
 
 ## Further Reading
 
 - [Website Obesity Crisis](https://idlewords.com/talks/website_obesity.htm)
-- Openweb 
+- [A Web Renaissance](https://anildash.com/2022/04/13/a-web-renaissance/)
+- [What is the Small Web?](https://ar.al/2020/08/07/what-is-the-small-web/)
+- [The small web is beautiful](https://benhoyt.com/writings/the-small-web-is-beautiful/)
+- [The open web is not going away](https://techcrunch.com/2016/04/10/1301496/)
