--- a/_posts/2021-11-04-review.md
+++ b/_posts/2021-11-04-review.md
@@ -1,6 +1,6 @@
 --- 
 layout: post
-title: Weekly Review 02
+title: Weekly Roundup 4th November 2021
 ---
 
 ## 📺 I watched 
@@ -21,4 +21,4 @@ title: Weekly Review 02
 
 🎵 Music
 
-- [Play by Moby](https://musicbrainz.org/release-group/7f6a4e72-9fee-39db-8817-63425f97a0f5_)
+- [Play by Moby](https://musicbrainz.org/release-group/7f6a4e72-9fee-39db-8817-63425f97a0f5)
