--- a/_posts/2023-06-25-optimize.md
+++ b/_posts/2023-06-25-optimize.md
@@ -4,16 +4,16 @@ title: What are you optimizing for?
 ---
 
 I was talking with a friend recently and I shared with them that I'm feeling quite bewildered about the future.
-This isn't to say that I'm depressed, nor am I anxious, rather this feeling comes from the same place when one finishes a large project; I've been in what can only be described as a holding pattern whilst waiting for the previous chapter of my life to close, and now that it has, I'm unsure what I should do.
+This isn't to say that I'm depressed, nor am I anxious, rather this feeling comes from the same place when one finishes a large project; I've been in what can only be described as a holding pattern whilst waiting for the previous chapter of my life to close, and now that it has, I'm unsure what I should do. I did everything that I thought I was supposed to, and arrived at exactly where I wanted to be. Now what?
 
-I did everything that I thought I was supposed to, and arrived at exactly where I wanted to be.
-
-Then I remebered that at the old Apple headquarters there's a quote by Steve Jobs in one of the hallways that reads
+Then I remebered a quote by Steve Jobs featured in one of the hallways of Apple's campus that reads
 
 > If you do something and it turns out pretty good, then you should go do something else wonderful, not dwell on it for too long. Just figure out what's next.
 
-But there's so many paths to walk down! How does one decide "what's next"? My friend then said what you should focus on is deciding what you want to optimize for, and that will usually help guide you.
+But there's so many paths to walk down! How does one decide "what's next"? My friend then said what you should focus on is deciding what you want to optimize for, and *that* will guide you.
 
-If it's money that you want, go take a boring job that pays extremely well. If it's a sense of purpose, quit what you're doing and volunteer somewhere. If you want an intellectual pursuit, then you should study some more and work really hard on difficult problems. He then went on to say that there are thousands of well meaning physicists toiling away in research labs who barely make enough to live on, and that maybe I should consider that before embarking on a long journey of academic self discovery! 
+> If it's money that you want, go take a boring job that pays extremely well. If it's a sense of purpose, quit what you're doing and volunteer somewhere. If you want an intellectual pursuit, then you should study some more and work really hard on difficult problems.
 
-I think there is no one *correct* course of action, other than that one has to just try *something* new. Even if you don't know what you're optimsing for, if you get started you'll figure it out.
+He then went on to say that there are thousands of well meaning physicists toiling away in research labs who barely make enough to live on, and that maybe I should consider that before embarking on a long journey of academic self discovery! 
+
+I think there is no one *correct* course of action, other than  one has to just try *something* new. Even if you don't know what you're optimsing for, if you pick anything and get started, you'll figure it out. So that's what I'm going to do for the rest of this year - say yes to opportunities and through that figure out what I'm optimising for.
