Major update to web apps, posts, main pages.

--- a/_posts/2023-07-06-go.md
+++ b/_posts/2023-07-06-go.md
@@ -3,3 +3,8 @@ layout: post
 title:  "Notes on Golang"
 ---
 
+Go is an incredibly concise and simple language that can border on the annoying when working with an overly large project; the brevity can cause confusion when context swtiching between Java and Go.
+
+I enjoy working with JSON and other serialised data in Go as I don't have to create model classes with methods for deserialsition - it's all implicitly understood by the standard library when working with structs. This helps when writing REST web APIs.
+
+Concurrency in Golang has been baked into the language.
