--- a/_posts/2023-07-31-java.md
+++ b/_posts/2023-07-31-java.md
@@ -5,10 +5,18 @@ title:  "Notes on Modern Java"
 
 ## Reactive Java
 
+Reactive programming is a distinct sub paradigm of functional programming; it's concerned with propogating changes through the code based on events. Reactive Streams is a specification that Java has implemented. 
+
+Events are emitted and the code reacts to them. 
+
+`Mono` are returned - one and only one. 
+
+`Flux` can return  
+
 ## Misc.
 
-### Preferences 
-[Oliver Drotbohm's article](https://odrotbohm.de/2013/11/why-field-injection-is-evil/) helped me decide the method of DI that I prefer for IoC. I was working in a code base that had both styles and the constructor injection was preferable. However I did use field injection when there were two conflicting Beans, solved with the following: 
+### Dependency Injection Preferences 
+[Oliver Drotbohm's article](https://odrotbohm.de/2013/11/why-field-injection-is-evil/) helped me decide the method of DI that I prefer for implementing inversion of control. I was working in a code base that had both styles and the constructor injection was preferable. However I did use field injection when there were two conflicting Beans, solved with the following: 
 
 ```java
 @Bean(name = "classname")
