Updated fast post and added blogroll page

--- a/_posts/2023-10-15-fast.md
+++ b/_posts/2023-10-15-fast.md
@@ -18,4 +18,11 @@ Yes. Look at what has been [done before](https://patrickcollison.com/fast).
 
 ### The conclusion? 
 
-You just have to start. Right now.
+The first step is starting. You just have to start, so start right now.
+The second step is "starting" consistently, every day. You need to work "a little but often" as one of my teachers used to say.
+Then you start to get better becasue you're putting in the practice, and then you start to see the results.
+Once you see the results you feel great, and you want to become even better, so you start to identify ways of improving how you work.
+You tweak your routine, your practice, and then you get faster.
+And once you consistently work fast great things start to happen. You can execute on your ideas, your feedback loops get shorter and you can get more done. 
+ 
+
