--- a/_posts/2023-10-15-fast.md
+++ b/_posts/2023-10-15-fast.md
@@ -5,6 +5,7 @@ title: Fast
 
 > *"Being wrong might hurt you a bit, but being slow will kill you."* -- Jeff Bezos
 
+I know that I can work quickly and well. I've done it before, and I'm always proud when I produce good work quickly. However I sometimes lose momentum and don't work as quickly as I'd like. This post is what I finy myself thinking about when I realise that I'm working too slowly. 
 
 ### Can good work be done fast? 
 Yes. Look at what has been [done before](https://patrickcollison.com/fast).
@@ -16,9 +17,9 @@ Yes. Look at what has been [done before](https://patrickcollison.com/fast).
 - [Excellence is a habit but so is failure](https://awesomekling.github.io/Excellence-is-a-habit-but-so-is-failure/)
 
 
-### The conclusion? 
+### That's great, but how does one work quickly?
 
-The first step is starting. You just have to start, so start right now.
+The first and hardest step is starting. To finish the work you have to start the work, so start right now.
 The second step is "starting" consistently, every day. You need to work "a little but often" as one of my teachers used to say.
 Then you start to get better because you're putting in the practice, and then you start to see the results.
 Once you see the results you feel great, and you want to become even better, so you start to identify ways of improving how you work.
