--- a/_posts/2023-10-15-fast.md
+++ b/_posts/2023-10-15-fast.md
@@ -5,7 +5,7 @@ title: Fast
 
 > *"Being wrong might hurt you a bit, but being slow will kill you."* -- Jeff Bezos
 
-I know that I can work quickly and well. I've done it before, and I'm always proud when I produce good work quickly. However I sometimes lose momentum and don't work as quickly as I'd like. This post is what I finy myself thinking about when I realise that I'm working too slowly. 
+I know that I can work quickly and well. I've done it before, and I'm always proud when I produce good work quickly. However I sometimes lose momentum and don't work as quickly as I'd like. This post is what I find myself thinking about when I realise that I'm working too slowly. 
 
 ### Can good work be done fast? 
 Yes. Look at what has been [done before](https://patrickcollison.com/fast).
