Clean up for 2025

--- a/_posts/2023-06-25-optimize.md
+++ b/_posts/2023-06-25-optimize.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: What are you optimizing for? 
+tags: [test, test2, ai]
 ---
 
 I was talking with a friend recently and I shared with them that I'm feeling quite bewildered about the future.
